--- a/tests/result/dir/subdir/linked.html
+++ b/tests/result/dir/subdir/linked.html
@@ -448,9 +448,32 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="content">
 <div id="test-pattern" class="imageblock">
 <div class="content">
-<a class="image" href="git.venberg.xyz/Gabe/adocStaticSiteGen"><img src="../../images/test_patern.jpg" alt="Stand By"></a>
+<a class="image" href="git.venberg.xyz/Gabe/adocStaticSiteGen"><img src="../../images/test_pattern.svg" alt="Stand By"></a>
 </div>
 <div class="title">Figure 1. Technical Difficulties</div>
+</div>
+<div class="quoteblock">
+<blockquote>
+While the creative works from the 16th century can still be accessed and used by others, the data in some software programs from the 1990s is already inaccessible. Once a company that produces a certain product goes out of business, it has no simple way to uncover how its product encoded data. The code is thus lost, and the software is inaccessible. Knowledge has been destroyed.
+</blockquote>
+<div class="attribution">
+&#8212; Lawrence Lessig<br>
+<cite>May the Source Be With You</cite>
+</div>
+</div>
+<div class="verseblock">
+<pre class="content">Three Rings for the Elven-kings under the sky,
+Seven for the dwarf-lords in their halls of stone,
+Nine for Mortal Men doomed to die,
+One for the Dark Lord on his dark throne,
+In the Land of Mordor where the Shadows lie.
+One Ring to rule them all, One Ring to find them,
+One Ring to bring them all and in the darkness bind them
+In the Land of Mordor where the Shadows lie.</pre>
+<div class="attribution">
+&#8212; J.R.R. Tolkien<br>
+<cite>The Fellowship of the Ring</cite>
+</div>
 </div>
 <div class="paragraph">
 <p><a href="https://git.venberg.xyz/Gabe/adocStaticSiteGen" class="bare">https://git.venberg.xyz/Gabe/adocStaticSiteGen</a></p>
