--- a/tests/result/landing_page.html
+++ b/tests/result/landing_page.html
@@ -449,7 +449,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_inline_formatting_tests">inline formatting tests</a></li>
-<li><a href="#_list_tests">list tests</a></li>
 <li><a href="#_link_tests">link tests</a></li>
 <li><a href="#_tables_test">tables test</a></li>
 <li><a href="#_included_section">included section</a>
@@ -527,11 +526,15 @@ Sed eleifend, enim vitae ultrices auctor, dolor ipsum molestie dui, id dignissim
 <div class="paragraph">
 <p>&#8594; &#8658; &#8592; &#8656;</p>
 </div>
+<div class="paragraph">
+<p>==colapsable block</p>
 </div>
+<details>
+<summary class="title">Details</summary>
+<div class="content">
+<div class="paragraph">
+<p>== list tests</p>
 </div>
-<div class="sect1">
-<h2 id="_list_tests">list tests</h2>
-<div class="sectionbody">
 <div class="ulist">
 <div class="title">unordered list test</div>
 <ul>
@@ -666,6 +669,17 @@ Sed eleifend, enim vitae ultrices auctor, dolor ipsum molestie dui, id dignissim
 </li>
 </ol>
 </div>
+</div>
+</details>
+<div class="paragraph">
+<div class="title">math test</div>
+<p>\(\frac{\frac{1}{x}+\frac{1}{y}}{y-z}\)</p>
+</div>
+<div class="stemblock">
+<div class="content">
+\$[[a,b\],[c,d\]\]((n),(k))\$
+</div>
+</div>
 <div class="hdlist">
 <div class="title">description list test</div>
 <table>
@@ -701,7 +715,7 @@ printers
 <h2 id="_link_tests">link tests</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Lets go back to the <a href="#_list_tests">list tests</a> or to the <a href="#_tables_test">tables</a></p>
+<p>Lets go back to the <a href="#list tests">[list tests]</a> or to the <a href="#_tables_test">tables</a></p>
 </div>
 <div class="paragraph">
 <p><a href="https://git.venberg.xyz/Gabe/adocStaticSiteGen">gittea absolute link</a></p>
@@ -893,5 +907,29 @@ The style can be any one of the admonition labels:</p>
 <div id="footer-text">
 </div>
 </div>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  messageStyle: "none",
+  tex2jax: {
+    inlineMath: [["\\(", "\\)"]],
+    displayMath: [["\\[", "\\]"]],
+    ignoreClass: "nostem|nolatexmath"
+  },
+  asciimath2jax: {
+    delimiters: [["\\$", "\\$"]],
+    ignoreClass: "nostem|noasciimath"
+  },
+  TeX: { equationNumbers: { autoNumber: "none" } }
+})
+MathJax.Hub.Register.StartupHook("AsciiMath Jax Ready", function () {
+  MathJax.InputJax.AsciiMath.postfilterHooks.Add(function (data, node) {
+    if ((node = data.script.parentNode) && (node = node.parentNode) && node.classList.contains("stemblock")) {
+      data.math.root.display = "block"
+    }
+    return data
+  })
+})
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
 </body>
 </html>
